Thu Aug 23 23:18:44 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* config.h.in configure.in xsltproc/xsltproc.c: complete test
	  of a DocBook XSLt transform with --nonet, need stat(), added
	  checking in configure.

Thu Aug 23 17:37:40 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: catalog integration, cleanup with
	  the --nonet option closing #59427
	* libxslt/xslt.c: removed a small memleak when using a 
	  stylesheet PI

Tue Aug 21 13:17:19 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* //Makefile.am : fixed an error I propagated to nearly all
	  Makefiles.am on Saturday

Tue Aug 21 13:10:03 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libexslt/math.c libxslt/numbers.c: use xmlXPathIsNaN() and
	  xmlXPathIsInf()
	* libxslt/pattern.c: tag a potential threading problem.

Tue Aug 21 11:18:45 CEST 2001 Bjorn Reese <breese@users.sourceforge.net>

	* libxslt/numbers.c libexslt/math.c: Re-worked NaN and Inf
	  support.

Sat Aug 18 15:57:46 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* //Makefile.am : fixed a number of small problems with
	  Makefiles spotted by Albert Chin

Thu Aug 16 14:37:55 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* win32/dsp/libxslt.def: minimal changes to compile 1.0.2 on
	  Windows/MSC

Thu Aug 16 12:58:11 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.c: fixed a permutation of args to
	  xsltPrintErrorContext()

Wed Aug 15 15:19:14 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* Makefile.am config.h.in configure.in libxslt/xsltwin32config.h:
	  release of 1.0.2
	* tests/docs/Makefile.am libexslt/Makefile.am
	  tests/documents/Makefile.am tests/general/Makefile.am
	  xsltproc/Makefile.am: cleaning of Makefiles pointed out
	  by make distcheck

Wed Aug 15 13:54:41 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/functions.h libxslt/transform.c: a bit of cleanup

Wed Aug 15 12:06:43 CEST 2001 Daniel Veillard <daniel@veillard.com>
